# 3DFaceUtils

./: README.md  main.py  pyproject.toml  requirements.txt
Mln_utils/: clustering.py
Rec_utils/: fitting.py  landmark.py  load.py  mesh.py  mesh_add_eyeball.py  render.py  transform.py  visualize.py
Rec_utils/eye_ball_assets/: head_With_BetterShouder_idx.npy  head_coreidx.npy  head_template.ply  head_template_faceregions.ply  head_tri_forUVmap.npy  head_vert_distidx.npy  head_vert_weight.npy  hifi3dpp_model_info.mat
Reg_utils/: delaunay_processing.py  face_corespond.py  nicp.py  uvmap_processing.py
Reg_utils/face_registration/: Face_Registration_cypcd_obj.py  Face_Registration_nricp_WRL_automaland.py  Face_Registration_nricp_WRL_manualland.py  Face_Registration_nricp_obj.py  Face_Registration_nricp_ply_Adult.py  Face_Registration_nricp_ply_Adult_iges.py  Face_Registration_nricp_ply_Baby.py  Face_Registration_nricp_ply_Children.py
face_utils/: __init__.py
face_utils/ml/: __init__.py  clustering.py  fcmeans.py
face_utils/reconstruction/: __init__.py  fitting.py  landmark.py  light.py  mesh.py  mesh_add_eyeball.py  plyio.py  render.py  transform.py  visualize.py
face_utils/reconstruction/eye_ball_assets/: head_landmarks.txt  head_template_Neck&Ears.ply  head_template_half.ply  head_template_innerfaceregions.ply  teaser_1_WithBetterShoulder.ply  unwrap_1024_info.mat
face_utils/registration/: __init__.py  delaunay_processing.py  face_corespond.py  model_transform.py  nicp.py  uvmap_processing.py
pyvisita/: __init__.py
(+9 files in other folders)
